# BUAA_Compiler2020

./: .gitignore  Block.cpp  Block.h  CMakeLists.txt  ErrorEntry.cpp  ErrorEntry.h  ErrorManager.cpp  ErrorManager.h  Info.cpp  Info.h  LocalRegPool.cpp  LocalRegPool.h  MIR.cpp  MIR.h  Mips.cpp  Mips.h  ObjCodes.cpp  ObjCodes.h  PeekableQueue.cpp  PeekableQueue.h  Proc.cpp  Proc.h  Quad.cpp  Quad.h  README.md  Semantic.cpp  Semantic.h  SymbolInfo.cpp  SymbolInfo.h  SymbolManager.cpp  SymbolManager.h  Table.cpp  Table.h  TokenPair.cpp  TokenPair.h  config.cpp  config.h  core_lexic_Lexic.cpp  core_lexic_Lexic.h  core_lexic_Printer.cpp  (+70 more)
doc/: Design Documentation.md  V1.0词法分析阶段设计文档说明.txt  V2.0语法分析阶段设计文档说明.txt  V3.0错误处理阶段设计文档说明.txt  V4.0代码生成阶段设计文档说明.txt  V5.0代码优化阶段设计文档说明.txt  总结感想.md  申优文章.md
doc/image/: calling_convention.xlsx
doc/optim/: testfile1_18231070_何泽欣_优化前中间代码.txt  testfile1_18231070_何泽欣_优化前目标代码.txt  testfile1_18231070_何泽欣_优化后中间代码.txt  testfile1_18231070_何泽欣_优化后目标代码.txt  testfile2_18231070_何泽欣_优化前中间代码.txt  testfile2_18231070_何泽欣_优化前目标代码.txt  testfile2_18231070_何泽欣_优化后中间代码.txt  testfile2_18231070_何泽欣_优化后目标代码.txt  testfile3_18231070_何泽欣_优化前中间代码.txt  testfile3_18231070_何泽欣_优化前目标代码.txt  testfile3_18231070_何泽欣_优化后中间代码.txt  testfile3_18231070_何泽欣_优化后目标代码.txt  对中间代码的补充说明.txt
testbench/: genmips.py  test_div_magic.cpp  tester.py
testcases/ERROR/: testfile10.txt  testfile6.txt
testcases/GENMIPS/: output5.txt  output6.txt  output7.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile8.txt
testcases/MYERROR/: testfile1.txt  testfile2.txt  testfile5.txt  testfile7.txt  testfile8.txt  testfile9.txt
testcases/MYGENMIPS/: input2.txt  output1.txt  output2.txt  output3.txt  output4.txt  output8.txt  testfile1.txt  testfile6.txt  testfile7.txt
testcases/PUBGEN/2/: output1.txt  output2.txt
